--- a/views/skills/show.ejs
+++ b/views/skills/show.ejs
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= title %></title>
+    <title>Express Dev Skill</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <h1><%= title %></h1>
     <a href="/">Home</a>
     |
     <a href="/skills">All Skills</a>
+    <h3><%= skill.skill %></h3>
+    <h3>Remarkable.</h3>
   </body>
+  
 </html>
